login dashboard verify pin screen

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "test",
-    "slug": "test",
+    "slug": "axiostest",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -35,10 +35,21 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "e4b805df-d373-4997-954f-d0cb39ea2196"
+      },
+      "API_URL": "https://uat-api-gateway.jags.ai"
+
+    },
+    "owner": "rameshjags"
   }
 }
